// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProfessorSummary Component renders professor info 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          class="ui huge header"
        >
          Nakul
           
          Verma
        </div>
      </div>
      <img
        class="ui avatar left spaced image"
        src="gold-nugget.svg"
      />
      <img
        class="ui avatar left spaced image"
        src="silver-nugget.svg"
      />
      <div
        class="ui container"
      >
        <span>
          Courses: 
        </div>
        <span>
          <a
            href="/course/1"
          >
            <span>
              COMS 4771
               
              Machine Learning
            </span>
          </a>
          , 
        </span>
        <span>
          <a
            href="/course/2"
          >
            <span>
              COMS 4774
               
              Advanced Machine Learning
            </span>
          </a>
          
        </span>
      </div>
      <a
        href="/review/submit"
      >
        <button
          class="ui orange button relaxed create-review-button"
        >
          WRITE A REVIEW 
          FOR NAKUL VERMA
        </button>
      </a>
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        class="ui huge header"
      >
        Nakul
         
        Verma
      </div>
    </div>
    <img
      class="ui avatar left spaced image"
      src="gold-nugget.svg"
    />
    <img
      class="ui avatar left spaced image"
      src="silver-nugget.svg"
    />
    <div
      class="ui container"
    >
      <span>
        Courses: 
      </div>
      <span>
        <a
          href="/course/1"
        >
          <span>
            COMS 4771
             
            Machine Learning
          </span>
        </a>
        , 
      </span>
      <span>
        <a
          href="/course/2"
        >
          <span>
            COMS 4774
             
            Advanced Machine Learning
          </span>
        </a>
        
      </span>
    </div>
    <a
      href="/review/submit"
    >
      <button
        class="ui orange button relaxed create-review-button"
      >
        WRITE A REVIEW 
        FOR NAKUL VERMA
      </button>
    </a>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ProfessorSummary Component renders professor no courses 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          class="ui huge header"
        >
          Nakul
           
          Verma
        </div>
      </div>
      <img
        class="ui avatar left spaced image"
        src="gold-nugget.svg"
      />
      <img
        class="ui avatar left spaced image"
        src="silver-nugget.svg"
      />
      <div
        class="ui container"
      >
        <span>
          Courses: 
        </div>
      </div>
      <a
        href="/review/submit"
      >
        <button
          class="ui orange button relaxed create-review-button"
        >
          WRITE A REVIEW 
          FOR NAKUL VERMA
        </button>
      </a>
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        class="ui huge header"
      >
        Nakul
         
        Verma
      </div>
    </div>
    <img
      class="ui avatar left spaced image"
      src="gold-nugget.svg"
    />
    <img
      class="ui avatar left spaced image"
      src="silver-nugget.svg"
    />
    <div
      class="ui container"
    >
      <span>
        Courses: 
      </div>
    </div>
    <a
      href="/review/submit"
    >
      <button
        class="ui orange button relaxed create-review-button"
      >
        WRITE A REVIEW 
        FOR NAKUL VERMA
      </button>
    </a>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
